[tool.poetry]
name = "python-modules-tests"
version = "0.1.0"
description = "Poc of some python modules"
authors = ["Fabricio Nogueira <nogsantos@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
jupyter = "^1.0.0"
requests = "^2.23.0"
rich = "^0.8.12"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
